public/lite/api/en/r2.3/_sources/generate/program_listing_file_include_converter_include_ops_fusion_avg_pool_fusion.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _program_listing_file_include_converter_include_ops_fusion_avg_pool_fusion.h:

Program Listing for File avg_pool_fusion.h
==========================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_converter_include_ops_fusion_avg_pool_fusion.h>` (``include/converter/include/ops/fusion/avg_pool_fusion.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   
   
   #ifndef MINDSPORE_CORE_OPS_AVG_POOL_FUSION_H_
   #define MINDSPORE_CORE_OPS_AVG_POOL_FUSION_H_
   #include <memory>
   #include <vector>
   #include "ops/base_operator.h"
   #include "mindapi/base/types.h"
   #include "mindapi/base/format.h"
   
   namespace mindspore {
   namespace ops {
   constexpr auto kNameAvgPoolFusion = "AvgPoolFusion";
   class MIND_API AvgPoolFusion : public BaseOperator {
    public:
     MIND_API_BASE_MEMBER(AvgPoolFusion);
     AvgPoolFusion() : BaseOperator(kNameAvgPoolFusion) { InitIOName({"x"}, {"output"}); }
   
     void Init(const std::vector<int64_t> &kernel_size = {1}, const std::vector<int64_t> &stride = {1},
               const PadMode &pad_mode = VALID, const Format &format = NCHW,
               const std::vector<int64_t> &pad = {0, 0, 0, 0}, const RoundMode &round_mode = FLOOR,
               const bool global = false, const ActivationType activation_type = NO_ACTIVATION);
   
     void set_pad_mode(const int64_t &pad_mode);
     void set_kernel_size(const std::vector<int64_t> &kernel_size);
     void set_strides(const std::vector<int64_t> &strides);
     void set_data_format(const int64_t &data_format);
     void set_pad(const std::vector<int64_t> &pad);
     void set_round_mode(const int64_t &round_mode);
   
     std::vector<int64_t> get_kernel_size() const;
     std::vector<int64_t> get_strides() const;
     int64_t get_pad_mode() const;
     int64_t get_data_format() const;
     std::vector<int64_t> get_pad() const;
     int64_t get_round_mode() const;
   
     void set_global(const bool global);
   
     void set_activation_type(const ActivationType activation_type);
   
     bool get_global() const;
   
     ActivationType get_activation_type() const;
   };
   
   abstract::AbstractBasePtr AvgPoolFusionInfer(const abstract::AnalysisEnginePtr &, const PrimitivePtr &primitive,
                                                const std::vector<abstract::AbstractBasePtr> &input_args);
   }  // namespace ops
   }  // namespace mindspore
   
   #endif  // MINDSPORE_CORE_OPS_AVG_POOL_FUSION_H_
